[gd_scene load_steps=2 format=3 uid="uid://bqxvn8y5qxqxq"]

[ext_resource type="Script" path="res://main.gd" id="1_0x8y5"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8y5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lua Modding System Demo - Enhanced Features"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainContent" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModManagementLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Mod Management"

[node name="LoadModsButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Load Mods from Directory"

[node name="LoadSpecificModButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Load Specific Mod JSON"

[node name="EnableModButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Enable ExampleMod"

[node name="DisableModButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Disable ExampleMod"

[node name="ReloadModButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reload ExampleMod"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScriptingLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Lua Scripting"

[node name="ExecuteStringButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Execute Lua String"

[node name="CallFunctionButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Call Lua Function"

[node name="SetGlobalButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Set Global Variable"

[node name="GetGlobalButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Get Global Variable"

[node name="TestAllFeaturesButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Test All New Features"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LifecycleLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Lifecycle Hooks"

[node name="CallInitButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Call on_init()"

[node name="CallReadyButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Call on_ready()"

[node name="CallExitButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Call on_exit()"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SandboxingLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Security & Sandboxing"

[node name="ToggleSandboxButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Toggle Sandbox Mode"

[node name="TestUnsafeCodeButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Test Unsafe Code"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent"]
layout_mode = 2

[node name="NewFeaturesHBox" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent"]
layout_mode = 2

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SafeCastingLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer5"]
layout_mode = 2
text = "Safe Casting & Wrappers"

[node name="TestSafeCastingButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer5"]
layout_mode = 2
text = "Test Safe Casting"

[node name="TestWrappersButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer5"]
layout_mode = 2
text = "Test Object Wrappers"

[node name="TestTypeCheckingButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer5"]
layout_mode = 2
text = "Test Type Checking"

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer5"]
layout_mode = 2

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GodotObjectsLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6"]
layout_mode = 2
text = "Godot Object Access"

[node name="TestGetNodeButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6"]
layout_mode = 2
text = "Test get_node()"

[node name="TestGetChildrenButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6"]
layout_mode = 2
text = "Test get_children()"

[node name="TestPropertyAccessButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6"]
layout_mode = 2
text = "Test Property Access"

[node name="TestMethodCallButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6"]
layout_mode = 2
text = "Test Method Calls"

[node name="HSeparator7" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6"]
layout_mode = 2

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResourceManagementLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer7"]
layout_mode = 2
text = "Resource & Scene Management"

[node name="TestLoadResourceButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer7"]
layout_mode = 2
text = "Test load_resource()"

[node name="TestInstanceSceneButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer7"]
layout_mode = 2
text = "Test instance_scene()"

[node name="TestResourceWrapperButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer7"]
layout_mode = 2
text = "Test Resource Wrappers"

[node name="HSeparator8" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer7"]
layout_mode = 2

[node name="VBoxContainer8" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EventsAndSignalsLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer8"]
layout_mode = 2
text = "Events & Signals"

[node name="TestEmitEventButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer8"]
layout_mode = 2
text = "Test emit_event()"

[node name="TestSubscribeEventButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer8"]
layout_mode = 2
text = "Test subscribe_event()"

[node name="TestSignalConnectionButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer8"]
layout_mode = 2
text = "Test Signal Connection"

[node name="HSeparator9" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer8"]
layout_mode = 2

[node name="VBoxContainer9" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CoroutinesLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer9"]
layout_mode = 2
text = "Coroutines"

[node name="TestCreateCoroutineButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer9"]
layout_mode = 2
text = "Test create_coroutine()"

[node name="TestResumeCoroutineButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer9"]
layout_mode = 2
text = "Test resume_coroutine()"

[node name="TestCoroutineStatusButton" type="Button" parent="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer9"]
layout_mode = 2
text = "Test Coroutine Status"

[node name="HSeparator10" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent"]
layout_mode = 2
text = "Output:"

[node name="OutputTextEdit" type="TextEdit" parent="VBoxContainer/ScrollContainer/MainContent"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Lua output will appear here..."
editable = false

[node name="HSeparator11" type="HSeparator" parent="VBoxContainer/ScrollContainer/MainContent"]
layout_mode = 2

[node name="ModInfoLabel" type="Label" parent="VBoxContainer/ScrollContainer/MainContent"]
layout_mode = 2
text = "Mod Information:"

[node name="ModInfoTextEdit" type="TextEdit" parent="VBoxContainer/ScrollContainer/MainContent"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Mod information will appear here..."
editable = false

[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer/LoadModsButton" to="." method="_on_LoadModsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer/LoadSpecificModButton" to="." method="_on_LoadSpecificModButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer/EnableModButton" to="." method="_on_EnableModButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer/DisableModButton" to="." method="_on_DisableModButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer/ReloadModButton" to="." method="_on_ReloadModButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2/ExecuteStringButton" to="." method="_on_ExecuteStringButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2/CallFunctionButton" to="." method="_on_CallFunctionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2/SetGlobalButton" to="." method="_on_SetGlobalButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2/GetGlobalButton" to="." method="_on_GetGlobalButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer2/TestAllFeaturesButton" to="." method="_on_TestAllFeaturesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer3/CallInitButton" to="." method="_on_CallInitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer3/CallReadyButton" to="." method="_on_CallReadyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer3/CallExitButton" to="." method="_on_CallExitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer4/ToggleSandboxButton" to="." method="_on_ToggleSandboxButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/HBoxContainer/VBoxContainer4/TestUnsafeCodeButton" to="." method="_on_TestUnsafeCodeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer5/TestSafeCastingButton" to="." method="_on_TestSafeCastingButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer5/TestWrappersButton" to="." method="_on_TestWrappersButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer5/TestTypeCheckingButton" to="." method="_on_TestTypeCheckingButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6/TestGetNodeButton" to="." method="_on_TestGetNodeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6/TestGetChildrenButton" to="." method="_on_TestGetChildrenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6/TestPropertyAccessButton" to="." method="_on_TestPropertyAccessButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer6/TestMethodCallButton" to="." method="_on_TestMethodCallButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer7/TestLoadResourceButton" to="." method="_on_TestLoadResourceButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer7/TestInstanceSceneButton" to="." method="_on_TestInstanceSceneButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer7/TestResourceWrapperButton" to="." method="_on_TestResourceWrapperButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer8/TestEmitEventButton" to="." method="_on_TestEmitEventButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer8/TestSubscribeEventButton" to="." method="_on_TestSubscribeEventButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer8/TestSignalConnectionButton" to="." method="_on_TestSignalConnectionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer9/TestCreateCoroutineButton" to="." method="_on_TestCreateCoroutineButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer9/TestResumeCoroutineButton" to="." method="_on_TestResumeCoroutineButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MainContent/NewFeaturesHBox/VBoxContainer9/TestCoroutineStatusButton" to="." method="_on_TestCoroutineStatusButton_pressed"]
